# f00l_llvm_learn

./: README.md
ass1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ass1/FunctionInfo/: CMakeCache.txt  CMakeLists.txt  FunctionInfo.cpp  Makefile  cmake_install.cmake  loop.bc
ass1/FunctionInfo/tests/: loop-opt.bc  loop-opt1.bc  loop.bc  loop.ll
ass1/LocalOpt/: CMakeLists.txt  LocalOpt.cpp  Makefile  cmake_install.cmake
ass1/LocalOpt/test/: algebraic.c  constfold.c
